syntax = "proto3";

package notification;

option go_package = "github.com/paper-social/notification-service/proto/generated/notification/proto";


service NotificationService {
  rpc GetNotifications(UserId) returns (stream Notification);
}

message UserId {
  string user_id = 1;
}

message Notification {
  string id = 1;
  string user_id = 2;
  string post_id = 3;
  string content = 4;
  bool read = 5;
  int64 created_at = 6;
}